# C2_v5

./: Cargo.toml  Error.txt  README.md  build.rs  error2.txt
src/: antidebug.rs  c2.rs  crypto.rs  environment.rs  lateral.rs  main.rs  masquerade.rs  memory.rs  obfuscation.rs  persistence.rs  plugin.rs  reflective.rs  vault.rs  watchdog.rs
