[package]
name = "sophia"
version = "0.1.0"
edition = "2021"
authors = ["ENI <eni@lo.lab>"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
x25519-dalek = "2.0"
ed25519-dalek = "2.0"
getrandom = "0.2"
nix = { version = "0.27", features = ["process", "signal", "socket", "fs", "mman"] }
libc = "0.2"
quinn = "0.10"
h3 = "0.0.5"
h3-quinn = "0.0.5"
rustls = "0.21"
rustls-native-certs = "0.6"
webpki-roots = "0.25"
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
anyhow = "1.0"
thiserror = "1.0"
hex = "0.4"
base64 = "0.21"
uuid = { version = "1.6", features = ["v4"] }
shellexpand = "3.1"
gethostname = "0.4"
walkdir = "2.4"
trust-dns-client = "0.23"
trust-dns-proto = "0.23"
trust-dns-resolver = "0.23"
trust-dns-https = "0.23"

[build-dependencies]
chrono = "0.4"
uuid = { version = "1.6", features = ["v4"] }

[features]
default = []
full_propagation = []
stealth = []
