[package]
name = "sophia"
version = "0.1.0"
edition = "2021"
authors = ["ENI <eni@lo.lab>"]

[profile.release]
opt-level = "z"  # Optimize for size
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
rpath = false

[dependencies]
chacha20poly1305 = { version = "0.10", default-features = false, features = ["std", "heapless", "getrandom"] }
argon2 = { version = "=0.5.3", default-features = false, features = ["std"] }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
rand_chacha = { version = "0.3", default-features = false, features = ["std"] }
sha2 = { version = "0.10", default-features = false }
x25519-dalek = { version = "2.0", default-features = false, features = ["static_secrets"] }
ed25519-dalek = { version = "2.0", default-features = false, features = ["std"] }
getrandom = { version = "0.2", features = ["js"] }
nix = { version = "0.27", default-features = false, features = ["process", "signal", "socket", "fs", "mman", "ptrace"] }
libc = "0.2"
quinn = { version = "0.10", default-features = false, features = ["tls-rustls", "runtime-tokio"] }
h3 = "0.0.5"
h3-quinn = "0.0.5"
rustls = { version = "0.21", default-features = false, features = ["logging", "tls12"] }
rustls-native-certs = "0.6"
webpki-roots = "0.25"
tokio = { version = "1.35", default-features = false, features = ["rt", "rt-multi-thread", "macros", "net", "time", "process", "io-util", "fs", "sync"] }
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
anyhow = "1.0"
thiserror = "1.0"
hex = "0.4"
base64 = "0.21"
uuid = { version = "1.6", default-features = false, features = ["v4"] }
shellexpand = "3.1"
gethostname = "0.4"
walkdir = "2.4"
trust-dns-client = "0.21.1"
trust-dns-proto = "0.21.1"
trust-dns-resolver = { version = "0.21.1", default-features = false, features = ["serde-config", "dns-over-https-rustls", "tokio-runtime"] } # Added tokio-runtime
time = "=0.3.36" # Pin time to avoid edition 2024 requirement
base64ct = "=1.6.0" # Pin base64ct to avoid edition 2024 requirement
password-hash = "=0.5.0" # Pin password-hash to avoid upgrading base64ct

[build-dependencies]
chrono = "0.4"
uuid = { version = "1.6", features = ["v4"] }

[features]
default = []
full_propagation = []
stealth = []
